syntax = "proto3";

package vincenzo.product;

option java_package = "com.vincenzo.grpc.product";
option java_outer_classname = "ProductProto";
option java_multiple_files = true;

// 상품 서비스
service ProductService {
  // 상품 조회
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  
  // 상품 목록 조회
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  
  // 재고 확인
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  
  // 재고 차감
  rpc DeductStock(DeductStockRequest) returns (DeductStockResponse);
  
  // 재고 복원
  rpc RestoreStock(RestoreStockRequest) returns (RestoreStockResponse);
}

// 상품 조회 요청
message GetProductRequest {
  int64 product_id = 1;
}

// 상품 조회 응답
message GetProductResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}

// 상품 목록 조회 요청
message GetProductsRequest {
  repeated int64 product_ids = 1;
}

// 상품 목록 조회 응답
message GetProductsResponse {
  bool success = 1;
  string message = 2;
  repeated Product products = 3;
}

// 재고 확인 요청
message CheckStockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

// 재고 확인 응답
message CheckStockResponse {
  bool success = 1;
  string message = 2;
  bool available = 3;
  int32 current_stock = 4;
}

// 재고 차감 요청
message DeductStockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
  string transaction_id = 3;
}

// 재고 차감 응답
message DeductStockResponse {
  bool success = 1;
  string message = 2;
  int32 remaining_stock = 3;
}

// 재고 복원 요청
message RestoreStockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
  string transaction_id = 3;
}

// 재고 복원 응답
message RestoreStockResponse {
  bool success = 1;
  string message = 2;
  int32 current_stock = 3;
}

// 상품 정보
message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  int64 seller_id = 6;
  string status = 7;
}
